# PhenoDevOps

./: README.md
.github/: dependabot.yml
.github/workflows/: publish.yml
rust/forge/: Cargo.toml  SOTA_RESEARCH.md  cliff.toml  deny.toml  gitleaks.toml
rust/forge/.github/workflows/: benchmark.yml  ci.yml  pages-deploy.yml  quality-gate.yml  release.yml  security.yml
rust/forge/docs/absorbed/schemaforge/: package-lock.json
rust/forge/src/: lib.rs
rust/forge/tests/: integration.rs
